stylesheet.css
/* ... */
.lesson2 .gitexplaincontain {
	margin-bottom:0px;
	/*margin-top: 30px;*/
}

.shellexplaindivs {
	/*width:48%;*/
	text-align: center;
	background-color: rgba(0,0,0,0.3);
	height:250px;
	display: inline-block;
	border-radius: 5px;
}

.terminalex {
	background-color: rgba(0,0,0,0.8) !important;
}

.terminalex:hover {
	background-color: rgba(0,0,0,0.8) !important;
}

.shellexplaindivs a {
	text-decoration: none;
	color:black;
	font-weight: bold;
}

.shellexplaindivs a:hover {
	color:#dddddd;
	-webkit-transition: all 0.5s ease-in 0.5s;
	-moz-transition: all 0.5s ease-in 0.5s;
	-o-transition: all 0.5s ease-in 0.5s;
	transition: all 0.5s ease-in 0.5s;
}

.shellexplaindivs h3 {
	margin-top: 20px;
	padding-bottom: 15px;
}

.shellexplaindivs:hover {
	background-color: rgba(0,0,0,0.5);
	-webkit-transition: all 0.5s ease-in 0.5s;
	-moz-transition: all 0.5s ease-in 0.5s;
	-o-transition: all 0.5s ease-in 0.5s;
	transition: all 0.5s ease-in 0.5s;
}

.shellexplaindivs p {
	text-align: center;
	margin: 0 auto;
	padding: 0;
	width: 80%;
	padding-bottom: 20px;
}

.shellextrapadding {
	padding-bottom: 40px;
}

.shellexplaindiv2 {
	width:50% !important;
	/*background-color: rgba(0,0,0,0.7);*/
	color:#dddddd;
	font-family: courier;
	/*font-size: 14px;*/
	height:200px;
	text-align: left;
	/*margin-left: 20px;*/
	margin: 15px 0;
	display: inline-block;
	position:relative;
	top:-125px;
	left:0;
}

.shellexplaindiv2 h3 {
	/*padding-bottom:;*/
	display: inline-block;
	padding-left: 10px;
	font-size: 11px;
	margin-top: 5px;
	color:#008500;
}

.shellexplaindiv2 p {
	font-family:courier;
	color:#008500;
	font-size: 12px;
	padding-left: 5px;
	margin-top: -20px;
}

.shellexplaincontainer {
	width: 100%;
	height:300px;
	text-align: left;
}

.shellexplaincontainer p {
	text-align: left;
	margin-left: 5px;
	margin-bottom: -20px;
	padding-top: 10px;
	/*display: inline-block;*/
}

/*.shellexplaindiv2 .p1shell {
	text-align: left;
	position: relative;
	top:20px;
	margin-top: -40px;
}

.shellexplaindiv2 .p2shell {
	text-align: left;
	position: relative;
	top:24px;
	margin-top: -40px;
}*/

.cmdlist {
	height:200px;
	width:40%;
	background-color: rgba(0,0,0,0.4);
	border-radius: 5px;
	display: inline-block;
	position: relative;
	right:-100px;
	top:10px;
	margin-top: 15px;
}

.cmdlist h3 {
	font-size: 18px;
	width: 70%;
	text-align: center;
	margin:0 auto;
	font-weight: bold;
}

.cmdlist p {
	font-size: 14px;
	width:85%;
	padding-bottom: 10px;
	margin: 0 auto;
	padding-left: 10px;
}

/*LESSON 3*/

.lesson3 {
	height: 100%;
	width:100%;
	position: absolute;
	top:300%;
	left:0%;
	z-index: -5;
}

.lesson3 h2 {
	background-color: rgba(186,218,85,0.8);
	border-radius: 25px;
	/*display: inline-block;*/
	padding:7px;
	border:1px solid black;
	/*margin-top: 50px;*/
	font-weight:bold;
	font-size: 24px;
	font-family: 'Source Sans Pro', sans-serif;
	margin-top: 50px;
	/*margin:0 auto;*/
	/*margin-left: 10%;*/
	position: relative;
	z-index: 0;
	text-align: center;
}

.lesson3 h3 {
	/*display: inline-block;*/
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 20px;
	/*padding-left: 7px;*/
	text-align: center;
	padding-top: 15px;
	margin-top: 22px;
}

.lesson3 p {
	/*display:inline-block;*/
	/*padding-left: 120px;*/
	text-align: center;
	font-family: 'Source Sans Pro', sans-serif;
	padding-top: 10px;
}

.onlineexplaindivs {
	width:60%;
	text-align: left;
	background-color: rgba(0,0,0,0.3);
	height:250px;
	display: inline-block;
	border-radius: 5px;
}

.onlineexplaindivs a {
	text-decoration: none;
	color:black;
	font-weight: bold;
}

.onlineexplaindivs a:hover {
	color:#dddddd;
	/*transition: all 0.5s ease-in;*/
}

.onlineexplaindivs h3 {
	margin-top: 20px;
	padding-bottom: 15px;
}

.onlineexplaindivs:hover {
	background-color: rgba(0,0,0,0.5);
	-webkit-transition: all 0.5s ease-in 0.5s;
	-moz-transition: all 0.5s ease-in 0.5s;
	-o-transition: all 0.5s ease-in 0.5s;
	transition: all 0.5s ease-in 0.5s;
}

.onlineexplaindivs p {
	text-align: center;
	margin: 0 auto;
	padding: 0;
	width: 80%;
	padding-bottom: 20px;
	display: inline-block;
	margin-left: 60px;
}

.onlinerepocontain {
	margin-top: 30px;
	text-align: left;
	margin-bottom: 35px;
}

.downloads {
	display: inline-block;
	background-color: rgba(0,0,0,0.4);
	height: 250px;
	width:32%;
	position: relative;
	top: 0;
	right:0;
	border-radius: 5px;
}

.downloads a {
	color:#dddddd;
	text-decoration: none;
	border:1px solid #2c3747;
	border-radius: 5px;
	background-color: #2c3747;
	padding:5px;
	/*margin: 0 auto;*/
	position: relative;
	top:20px;
	left:110px;
}

.downloads a:hover {
	color:#9e9e9e;
}

.downloads p {
	margin-top: 35px;
}

/*FOOTER*/

.footer {
	position: fixed;
	bottom: 0;
	right:20px;
	/*color:white;*/
	background-color: rgba(0,0,0,0.7);
	border:1px solid white;
	padding: 7px 7px 0 7px;
	/*font-family: sans-serif;*/
	border-radius: 5px;
}

.footer a {
	color:white;
	font-size: 13px;
	font-family: sans-serif;
}


/*RESPONSIVE DESIGN*/

